LPM-862 правки библиотеки

--- a/src/style/bootstrap/_bootstrap.scss
+++ b/src/style/bootstrap/_bootstrap.scss
@@ -7,7 +7,6 @@
 @import "typography";
 @import "main";
 @import "link";
-@import "utilities";
 @import "padding";
 @import "tabs";
 @import "table";
@@ -18,3 +17,10 @@
 @import "popover";
 @import "dropdown";
 @import "button";
+@import "menu";
+@import "alert";
+@import "icon";
+@import "message";
+@import "push-notify";
+@import "collapse";
+@import "utilities";
