--- a/src/style/bootstrap/color.scss
+++ b/src/style/bootstrap/color.scss
@@ -29,7 +29,7 @@ $color-gray-bg: $color-dark-snow;
 $color-light-gray-bg: $color-snow;
 
 $color-primary: #62a8ea;
-$color-success: #3aa99e;
+$color-success: #46BE8A;
 $color-danger: #f96868;
 $color-warning: #f2a654;
 $color-info: #57C7D4;
