--- a/src/style/bootstrap/modal.scss
+++ b/src/style/bootstrap/modal.scss
@@ -93,6 +93,7 @@
     & .wind-body {
         padding: 30px;
         position:relative;
+        overflow-y:auto;
     }
     & .wind-footer {
         padding: 15px 30px;
