--- a/src/style/bootstrap/popover.scss
+++ b/src/style/bootstrap/popover.scss
@@ -14,6 +14,7 @@ $tooltip-bg: rgba(0, 0, 0, 0.8);
     border-radius: 6px;
     @include box-shadow(0 3px 7px rgba(0, 0, 0, 0.17));
     background-clip: padding-box;
+    font-size:12px;
 
     &.top {
         margin-top: -10px;
