--- a/src/style/bootstrap/_bootstrap.scss
+++ b/src/style/bootstrap/_bootstrap.scss
@@ -1,3 +1,4 @@
+@import "test";
 @import "vars";
 @import "mixins";
 @import "animation";
@@ -23,6 +24,6 @@
 @import "message";
 @import "push-notify";
 @import "collapse";
-@import "step";
+//@import "step";
 @import "utilities";
-@import "breadcrumb";
+//@import "breadcrumb";
