--- a/src/style/bootstrap/color.scss
+++ b/src/style/bootstrap/color.scss
@@ -19,7 +19,7 @@ $color-extra-dark-snow: #E5E9F2;
 //Text-colors
 $color-title: $color-black;
 $color-subtitle: $color-steel;
-$color-text: $color-smoke;
+$color-text: $color-black;
 $color-hint: $color-gray;
 
 //Interface colors
