--- a/src/style/bootstrap/vars.scss
+++ b/src/style/bootstrap/vars.scss
@@ -2,7 +2,8 @@ $step: 10px;
 $multiplier: 1.25;
 $btn-multiplier: 1.25;
 
-$base-font-size: 14px;
-$base-font-family: "Open Sans", Helvetica Neue, Arial, Helvetica, sans-serif;
+$base-font-size: 15px;
+//$base-font-family: "Open Sans", Helvetica Neue, Arial, Helvetica, sans-serif;
+$base-font-family: "CirceWebRegular", "Open Sans", Arial, Helvetica, sans-serif;
 $base-line-height: 1.428571429;
 $base-border-radius: 4px;
