--- a/src/style/bootstrap/main.scss
+++ b/src/style/bootstrap/main.scss
@@ -11,7 +11,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background: #eee;
+//    background: #eee;
     overflow-y: scroll;
     height: 100%;
 }
