--- a/src/style/bootstrap/vars.scss
+++ b/src/style/bootstrap/vars.scss
@@ -3,7 +3,7 @@ $multiplier: 1.25;
 $btn-multiplier: 1.25;
 
 $base-font-size: 15px;
+$base-line-height: 1.4;
 //$base-font-family: "Open Sans", Helvetica Neue, Arial, Helvetica, sans-serif;
 $base-font-family: "CirceWebRegular", "Open Sans", Arial, Helvetica, sans-serif;
-$base-line-height: 1.428571429;
 $base-border-radius: 4px;
