--- a/src/style/bootstrap/modal.scss
+++ b/src/style/bootstrap/modal.scss
@@ -27,7 +27,7 @@
 }
 
 .wind {
-    margin: 40px auto;
+    margin: 100px auto 0;
     background: #FFF;
     @include border-radius(4px);
     @include box-shadow(0 3px 30px rgba(0, 0, 0, .5));
@@ -105,7 +105,7 @@
 
 }
 
-html.wind-opened{
+html.wind_opened{
     overflow: hidden;
 }
 
