--- a/src/style/bootstrap/_bootstrap.scss
+++ b/src/style/bootstrap/_bootstrap.scss
@@ -23,6 +23,6 @@
 @import "message";
 @import "push-notify";
 @import "collapse";
-//@import "step";
+@import "step";
 @import "utilities";
-//@import "breadcrumb";
+@import "breadcrumb";
