--- a/src/style/bootstrap/form.scss
+++ b/src/style/bootstrap/form.scss
@@ -288,13 +288,29 @@ select {
         text-shadow: 0 1px 0 #ffffff;
         background-color: #eeeeee;
         border: 1px solid #ccc;
+        &:first-child{
+            @include border-left-radius($base-border-radius);
+        }
+        &:last-child{
+            @include border-right-radius($base-border-radius);
+        }
     }
     input{
         position: relative;
         margin-bottom: 0;
         vertical-align: top;
-        @include border-left-radius(0);
-        border-left:0;
+        font-size:$base-font-size;
+        &:first-child{
+            @include border-right-radius(0);
+            border-right:0;
+            @include border-left-radius($base-border-radius);
+        }
+        &:last-child{
+            @include border-left-radius(0);
+            border-left:0;
+            @include border-right-radius($base-border-radius);
+
+        }
 
     }
 }
