--- a/src/style/bootstrap/table.scss
+++ b/src/style/bootstrap/table.scss
@@ -1,5 +1,5 @@
 .table {
-    border-collapse: collapse;
+    //border-collapse: collapse;
     border-spacing: 0;
     display: table;
     width: 100%;
