--- a/src/style/bootstrap/form.scss
+++ b/src/style/bootstrap/form.scss
@@ -283,7 +283,7 @@ select {
         padding: 8px 5px 0;
         font-size: 14px;
         font-weight: normal;
-        line-height: 20px;
+        line-height: 1;
         text-align: center;
         text-shadow: 0 1px 0 #ffffff;
         background-color: #eeeeee;
