--- a/src/style/bootstrap/typography.scss
+++ b/src/style/bootstrap/typography.scss
@@ -46,7 +46,7 @@ a {
     cursor: pointer;
     color: $color-blue;
     outline: none;
-    text-decoration:none;
+    text-decoration: none;
 }
 
 .link-dark {
@@ -65,7 +65,7 @@ a {
     a {
         &:hover {
             color: $color-blue-dark;
-            text-decoration:underline;
+            text-decoration: underline;
         }
     }
 
@@ -101,12 +101,15 @@ a {
 .color-hint {
     color: $color-hint;
 }
+
 .ui_required {
     color: $color-danger;
     font-size: 14px;
     line-height: 1px;
     cursor: help;
 }
-.ui_error{
+
+.ui_error {
     color: $color-danger;
+    font-size: $font-s;
 }
